--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,49 @@
 @charset "UTF-8";
 
-/* 
-    cores
-    verde: #49a09d
-    lilás: #5f2c82
-*/
+*{
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+:root{
+    --corfundo1: #5f2c82;
+    --corfundo2: #49a09d;
+}
+
+body,html{
+    background-color: var(--corfundo1);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.450);
+    overflow: hidden;
+}
+
+section#login > div#imagem{
+    display: block;
+    background: var(--corfundo1) url(../imagens/metal.jpg) no-repeat left bottom /cover fixed;
+    height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+}
