--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,8 @@ section#login{
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.450);
     overflow: hidden;
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
