--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,6 +10,7 @@
 :root{
     --corfundo1: #5f2c82;
     --corfundo2: #49a09d;
+    --corfundo2hover: #2d6462;
 }
 
 body,html{
@@ -31,7 +32,7 @@ section#login{
     transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.450);
     overflow: hidden;
@@ -55,6 +56,58 @@ div#formulario > h1{
     margin-bottom: 10px;
 }
 
-div#formulario{
+div#formulario > p{
     font-size: 0.8em;
+}
+
+form > div.campo{
+    background-color: var(--corfundo1);
+    width: 100%;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    margin: 5px 0;
+}
+
+div.campo > label{
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--corfundo2);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: var(--corfundo2hover);
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 9px;
+    margin-top: 5px;
+    background-color: #fff;
+    color: var(--corfundo2hover);
+    border: 1px solid var(--corfundo2);
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover{
+    background-color: #6cd3cf;
+}
+
+form > a.botao > span{
+    font-size: 1em;
 }
