--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -13,6 +13,7 @@
 
     section#login{
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem{
@@ -35,6 +36,7 @@
 
     section#login{
         width: 950px;
+        height: 320px;
     }
 
     section#login > div#imagem{
@@ -48,9 +50,12 @@
         width: 50%;
     }
 
-    div#formulario
+    div#formulario > h1{
+        font-size: 2em;
+    }
 
-    div#formulario{
-    font-size: 1.2em;
-}
+    div#formulario > p{
+    font-size: 1em;
+    margin: 20px 0;
+    }
 }
