--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,13 +29,13 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.450);
     overflow: hidden;
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -65,12 +65,35 @@ form > div.campo{
     width: 100%;
     height: 40px;
     display: block;
-    border-radius: 5px;
+    border-radius: 8px;
+    border: 2px solid var(--corfundo1);
     margin: 5px 0;
 }
 
 div.campo > label{
     display: none;
+}
+
+div.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit] {
@@ -81,7 +104,7 @@ form > input[type=submit] {
     background-color: var(--corfundo2);
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
 }
 
@@ -100,7 +123,7 @@ form > a.botao{
     background-color: #fff;
     color: var(--corfundo2hover);
     border: 1px solid var(--corfundo2);
-    border-radius: 5px;
+    border-radius: 8px;
     text-decoration: none;
 }
 
