--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,26 +23,30 @@ main{
     position: relative;
     height: 100vh;
     width: 100vw;
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 section#login{
     position: absolute;
-    top: 50%;
-    left: 50%;
+    
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.450);
     overflow: hidden;
-    transform: translate(-50%, -50%);
+    
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
 
 section#login > div#imagem{
     display: block;
-    background: var(--corfundo1) url(../imagens/metal.jpg) no-repeat left bottom /cover fixed;
+    background: var(--corfundo1) url(../imagens/metal.jpg) no-repeat left bottom /cover;
     height: 200px;
 }
 
